syntax = "proto2";
package ddproto;

enum ErrorCode {
    MJ_EC_SUCCESS = 0; //表示成功

    //-1   -100 登陆异常

    //-101   -200	游戏异常
    MJ_EC_CREATE_DESK_DIAMOND_NOTENOUGH = -101; // 创建房间的时候余额不足
    MJ_EC_CREATE_DESK_USER_NOTFOUND = -102; // 创建房间的时候未知用户
    MJ_EC_INTO_DESK_NOTFOUND = -103; // 进入房间的时候没有找到房间
    MJ_EC_GAME_READY_REPEAT = -110; // 重复准备
    MJ_EC_GAME_READY_CHIP_NOT_ENOUGH = -111; // 筹码不足
}

//麻将花色
enum mj_enum_color {
    WAN = 1; //万
    TIAO = 2; //条
    TONG = 3; //筒
}

// 麻将牌
message CardInfo {
    optional int32 type = 1;
    optional int32 value = 2; //0:牌背； 1~9：万；  10~18：条；  19~27：筒。
    optional int32 id = 3; //牌的id
}

//杠的类型
enum mj_enum_gangType {
    G_MINGGANG = 1; //明杠
    G_BAGANG = 2; //巴杠
    G_ANGANG = 3; //暗杠
}

//胡牌的类型
enum mj_enum_huType {
    H_NORMAL = 0; //普通胡牌
    //附加番数(特定操作)
    H_TianHu = 1; //5番:天胡 庄家起牌后胡牌
    H_DiHu = 2; //5番:地胡 第一回合中,没有任何玩家操作,非庄家自摸
    H_GangShangHua = 3; //+1番 杠上花
    H_GangShangPao = 4; //+1番 杠上炮
    H_QiangGang = 5; //+1番 抢杠
    H_HaiDiLao = 6; //+1番 海底捞
    H_HaiDiPao = 7; //+1番 海底炮
    H_HaidiGangShangHua = 8; //+2番 海底杠上花
    H_HaidiGangShangPao = 9; //+2番 海底杠上炮

    //
    H_JinGouDiao = 10; //+1番 金钩钓

    //可选附加玩法
    H_ZiMoJiaFan = 11; //+1番 自摸加番
    H_ZiMoJiaDi = 12; //+底 自摸加底
    H_changsha_qishouhu = 13; //长沙起手胡牌
}

//碰杠类型(客户端显示用)
enum mj_enum_composeCardType {
    C_MINGGANG = 1; //明杠
    C_BAGANG = 2; //巴杠
    C_ANGANG = 3; //暗杠
    C_PENG = 4; //碰
    C_CHI = 5; //吃牌的类型
}


enum mj_enum_paiType {
    H_DuiDuiHu = 1; //1番:对对胡
    H_QingYiSe = 2; //2番:清一色
    H_QiDui = 3; //2番:七对
    H_DaiYaoJiu = 4; //2番:带幺九
    H_LongQiDui = 5; //3番:龙七对
    H_JiangDui = 6; //3番:将对(2、5、8组成的对对胡)
    H_MenQing = 7; //+1番 门清
    H_ZhongZhang = 8; //+1番 中张(胡牌时不含1,9)

    //(内江麻将)
    H_KaErTiao = 9; //+1番 卡二条
    //(德阳麻将)
    H_JiaXin5 = 10; //+1番 夹心五

    H_QingLongQiDui = 11; //青龙七对
    H_QingQiDui = 12; //清七对
    H_PingHu = 13; //平胡

    //长沙麻将
    H_CHANGSHA_DAXISI = 14; //大四喜
    H_CHANGSHA_BANBANHU = 15; //板板胡
    H_CHANGSHA_QUEYISE = 16; //缺一色
    H_CHANGSHA_LIULIUSHUN = 17; //六六顺
    H_CHANGSHA_PINGHU = 18; //平胡

    H_CHANGSHA_PENGPENGHU = 19; //碰碰胡
    H_CHANGSHA_JIANGJIANGHU = 20; //将将胡
    H_CHANGSHA_QINGYISE = 21; //清一色
    H_CHANGSHA_QIXIAODUI = 22; //七小对
    H_CHANGSHA_QIXIAODUI_HAOHUA = 23; //豪华七小对
    H_CHANGSHA_QIXIAODUI_HAOHUA_DOUBLE = 24; //双豪华七小对
    H_CHANGSHA_QUANQIUREN = 25; //全求人
}

enum mj_enum_userGameStatus {
    MJ_U_INIT = 0; //初始化
    MJ_U_DINGQUE = 1; //定缺
    MJ_U_EXCHANGE = 2; //换牌
    MJ_U_PLAYING = 3; //游戏中
    MJ_U_FINISH = 4; //已经结束
}

enum mj_enum_deskGameStatus {
    MJ_INIT = 0; //初始化
    MJ_FAPAI = 1; //发牌的阶段
    MJ_EXCHANGE = 2; //换牌
    MJ_DINGQUE = 3; //定缺
    MJ_PLAYING = 4; //游戏中
    MJ_FINISH = 5; //已经结束
}

// 房间类型信息：包含房间类型和对应的局数、封顶、玩法等信息
// 房间类型枚举
enum MJRoomType {
    roomType_xueZhanDaoDi = 0; // 血战到底
    roomType_sanRenLiangFang = 1; // 三人两房
    roomType_siRenLiangFang = 2; // 四人两房
    roomType_deYangMaJiang = 3; // 德阳麻将
    roomType_daoDaoHu = 4; // 倒倒胡
    roomType_xueLiuChengHe = 5; // 血流成河
    roomType_liangRenLiangFang = 6; //两人两房
    roomType_liangRenSanFang = 7; //两人三房
    roomType_sanRenSanFang = 8; // 三人三房
    roomType_changSha = 9; //长沙麻将
    roomType_zhuoxiazi = 10; //捉虾子
    roomType_mj_baishan = 12; //白山麻将
}


message RoomTypeInfo {

}


message ComposeCard {
    optional int32 value = 1; // 麻将牌值: 0~27
    optional int32 type = 2; // 类型（碰，明杠，暗杠）
    repeated int32 chiValue = 3; //吃牌的value
}

message PlayerCard {
    repeated CardInfo handCard = 1; // 手牌数组（自己是明的，其他玩家服务器返回暗值，避免外挂获取别的玩家手牌）
    repeated ComposeCard composeCard = 2; // 摆牌数组（碰、明杠、暗杠）
    repeated CardInfo outCard = 3; // 已出牌数组
    repeated CardInfo huCard = 4; // 胡的牌
    optional uint32 UserId = 5; //
    optional int32 handCardCount = 6; //手牌的长度,当不用显示手牌的时候，只显示长度就行了
}