syntax = "proto2";
import public "common_client.proto";
package yjprotogo;

//长春麻将的gameId = 16
//长春麻将 创建房间
message p16_req_createDesk {
    optional ProtoHeader header = 1; //header
    optional int32 userCountLimit = 2; //玩家数量
    optional int32 boardsCout = 3; //房间的局数
    optional int64 baseValue = 4; //低分
    optional bool dianPaoBaoSanJia = 5; //点炮包三家
    optional bool xiaoJiFeiDan = 6; //小鸡飞蛋
    optional bool sanFengDan = 7; //三风蛋
    optional bool xiaDanSuanZhanLi = 8; //下单算战力
    optional bool daiQueMen = 9; //带缺门
}

//进入房间
message p16_ack_createDesk {
    optional ProtoHeader header = 1;

}

//进入房间
message p16_req_enterDesk {
    optional ProtoHeader header = 1;
    optional int32 roomType = 2; //1表示朋友卓，2表示金币场
    optional string password = 3; //房间号码
    optional int32 roomLevel = 4; //1表示朋友卓，2表示金币场
}

message p16_ack_enterDesk {
    optional ProtoHeader header = 1;
}

//准备
message p16_req_ready {
    optional ProtoHeader header = 1;
}

message p16_ack_ready {
    optional ProtoHeader header = 1;
}

//开始
message p16_ack_opening {
    optional ProtoHeader header = 1;
}


message p16b_bean_canPeng {

}
message p16b_bean_canChi {

}

message p16b_bean_canGang {

}

//动作广播
message p16_bc_moPai {
    optional ProtoHeader header = 1;
    optional int32 actType = 2; //操作类型
    optional uint32 actUser = 3; //操作的玩家
    optional int32 pai = 4; //摸得麻将
}

//碰 杠 胡 吃 的判断
message p16_bc_Check {
    optional ProtoHeader header = 1;
    optional p16b_bean_canPeng canPeng = 4; //是否可以碰
    optional p16b_bean_canChi canChi = 5; //是否可以吃
    optional p16b_bean_canGang canGang = 6; //是否可以杠

}

//碰
message p16_req_peng {
    optional ProtoHeader header = 1;
}

message p16_ack_peng {
    optional ProtoHeader header = 1;
}
//缸
message p16_req_gang {
    optional ProtoHeader header = 1;
}

message p16_ack_gang {
    optional ProtoHeader header = 1;
}

//吃
message p16_req_chi {
    optional ProtoHeader header = 1;
}

message p16_ack_chi {
    optional ProtoHeader header = 1;
}

//胡
message p16_req_hu {
    optional ProtoHeader header = 1;
}

message p16_ack_hu {
    optional ProtoHeader header = 1;
}
